package command;

/**
 * The class Command.
 *
 * @author GungnirLaevatain
 * @version 2019 -06-26 23:06:40
 * @since JDK 11
 */
public interface Command {
    /**
     * Execute.
     * 执行命令
     *
     * @author GungnirLaevatain
     */
    void execute();
}
